--- a/client/src/components/Country/Country.module.css
+++ b/client/src/components/Country/Country.module.css
@@ -8,9 +8,15 @@
 }
 
 .Image{
+    
     width: 95%;
     border-radius: 10px;
     padding-top: 5px;
     padding-left: 5px;
     padding-right: 5px;
 }
+
+/* .Continent{
+    display: flex;
+    align-items: flex-end;
+} */
