--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,12 @@
 body {
   margin: 0;
+  /* font-family: 'Koulen', cursive; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: black;
+  background-color: #100B00;
   /* background-image: './worldwwp.jpg'; */
   color: white;
 }
