--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -1,7 +1,9 @@
 .Hole{
-    background-color: white;
+    color: white;
+    background-color: yellow;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    
 }
