--- a/client/src/components/Country/Country.module.css
+++ b/client/src/components/Country/Country.module.css
@@ -5,10 +5,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: black;
 }
 
 .Image{
-    
     width: 95%;
     border-radius: 10px;
     padding-top: 5px;
