--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -1,9 +1,16 @@
 .Hole{
     color: white;
-    background-color: yellow;
+    background-color: #FFCF56;
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    
+}
+
+.Home{
+    text-decoration: none;
+}
+
+.Activity{
+    text-decoration: none;
 }
